# goit-algo-hw-03

./: first_task.py  pyproject.toml  second_task.py  third_task.py
first_task/: main.py
